<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >    

    <!--
    <LinearLayout 
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" > 
    <TextView
      android:id="@+id/itemListTitle_text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="15dp"
      android:text="@string/reportTitle_label"
      android:textAppearance="?android:attr/textAppearanceLarge"
      />
    </LinearLayout>
    -->
    
    <LinearLayout
	    android:orientation="horizontal" 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content">
	   <TextView
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:textStyle="bold"
		  android:text="@string/itemName_label"
		  />
	   <TextView
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:textStyle="bold"
		  android:text=":"
		  />
	   <TextView
	      android:id="@+id/itemName_text"
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
		  android:text="Item Name"
		  />
	</LinearLayout>
	
    <LinearLayout
	    android:orientation="horizontal" 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content">
	   <TextView
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:textStyle="bold"
		  android:text="@string/itemPrice_label"
		  />
	   <TextView
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:textStyle="bold"
		  android:text=":"
		  />
	   <TextView
	      android:id="@+id/itemPrice_text"
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:paddingLeft="5dp"
		  android:text="0.99"
		  />
	</LinearLayout>
	
    <LinearLayout
	    android:orientation="horizontal" 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    >
	   <TextView
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:textStyle="bold"
		  android:text="@string/itemQuantity_label"
		  />
	   <TextView
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:textStyle="bold"
		  android:text=":"/>
	   <TextView
	      android:id="@+id/itemQuantity_text"
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:paddingLeft="5dp"
		  android:text="1"
		  />
	</LinearLayout>
    
	<LinearLayout
	    android:orientation="horizontal" 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content">
	   <TextView
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:textStyle="bold"
		  android:text="@string/itemCondition_label"
		  />
	   <TextView
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:textStyle="bold"
		  android:text=":"/>
	   <TextView
	      android:id="@+id/itemCondition_text"
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:paddingLeft="5dp"
		  android:text="Used"
		  />
	</LinearLayout>
	
	<LinearLayout
	    android:orientation="horizontal" 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content">
	   <TextView
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:textStyle="bold"
		  android:text="@string/itemFreeShipping_label"
		  />
	   <TextView
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:textStyle="bold"
		  android:text=":"/>
	   <TextView
	      android:id="@+id/itemFreeShipping_text"
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:paddingLeft="5dp"
		  android:text="No"
		  />
	</LinearLayout>
	    
</LinearLayout>
